--- a/Tp1JuliePro/Tp1JuliePro/appsettings.json
+++ b/Tp1JuliePro/Tp1JuliePro/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LLBINFD060307\\SQLEXPRESS;Database=ZombieParty;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
+
 }
