--- a/Tp1JuliePro/Tp1JuliePro/appsettings.json
+++ b/Tp1JuliePro/Tp1JuliePro/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LLBINFD060307\\SQLEXPRESS;Database=ZombieParty;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Server=LLBINFD060307\\SQLEXPRESS;Database=Tp1JuliePro;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 
 }
