FCT i18n traduction models
Création des ressources pour la classe du modèle

--- a/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro_Models/JuliePro_Models.csproj
+++ b/E22_JuliePro_Master-Depart_TP2/JuliePro/JuliePro_Models/JuliePro_Models.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\JuliePro_Utility\JuliePro_Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
+
 </Project>
